Fixed overflowing issues in CSS

--- a/styles/main.css
+++ b/styles/main.css
@@ -37,7 +37,7 @@ body{
     width: 70vw;
     border: 10px solid #277DA1;
     border-radius: 10px;
-    height: 60vh;
+    height: 65vh;
 }
 
 .container.hidden{
@@ -54,6 +54,7 @@ body{
     justify-content: space-between;
     background-color: #4D908E;
     overflow: auto;
+    height: 17%;
 }
 
 .metric{
@@ -62,12 +63,14 @@ body{
     width: 100%;
     border-radius: 3px;
     text-align: center;
-    height: 30px;
+    height:50px;
+    font-size: 20px;
+
 }
 .buttons_container{
     background-color: #90BE6D;
     overflow: auto;
-    height: 125px;
+    height: 22%;
 
 }
 
@@ -77,7 +80,7 @@ body{
     background-color: #43AA8B;
     flex-flow: row;
     text-align: center;
-    height: 350px;
+    height: 60%;
 }
 
 .buttons_top, .buttons_bottom {
@@ -91,6 +94,8 @@ button{
     margin: 5px;
     border-radius: 10px;
     box-shadow: 2px 3px #888888;
+    font-size: 20px;
+    
 }
 
 button:hover {
@@ -128,6 +133,7 @@ button:hover {
     flex: 1.5;
     overflow-x: hidden;
     padding: 0 15px;
+    font-size: 18px;
 }
 
 .red_text{
@@ -216,7 +222,7 @@ button:hover {
           rgb(43,194,83) 37%,
           rgb(84,240,84) 69%
         );
-        box-shadow: 
+    box-shadow: 
           inset 0 2px 9px  rgba(255,255,255,0.3),
           inset 0 -2px 6px rgba(0,0,0,0.4);
         position: relative;
